[gd_scene load_steps=13 format=3 uid="uid://bslhrv3eo36wd"]

[ext_resource type="Script" path="res://scenes/lobby.gd" id="1_g2fmt"]
[ext_resource type="PackedScene" uid="uid://chbh4lxk8rmmd" path="res://scenes/ui/lobby_player.tscn" id="2_060bj"]
[ext_resource type="Texture2D" uid="uid://qyyc1oriohvx" path="res://assets/backgrounds/bg3.png" id="3_d1r8r"]
[ext_resource type="FontFile" uid="uid://s6n3xxjlmirm" path="res://assets/fonts/04B_30__.TTF" id="4_lgr3l"]
[ext_resource type="Texture2D" uid="uid://b4qqu1vmksmwa" path="res://assets/backgrounds/Stone.png" id="5_nf7si"]
[ext_resource type="PackedScene" uid="uid://dcxpd60c1fghu" path="res://scenes/OptionsMenu.tscn" id="6_nhnaf"]
[ext_resource type="Texture2D" uid="uid://yjgfmsc4sx0x" path="res://assets/cartas/RareMarco.png" id="6_vxr6i"]
[ext_resource type="FontFile" uid="uid://dyr4xh66jxnhy" path="res://assets/fonts/8-bit-hud.ttf" id="7_7yn50"]
[ext_resource type="PackedScene" uid="uid://deaupynjyeuaj" path="res://scenes/CreditsMenur.tscn" id="9_1t657"]
[ext_resource type="PackedScene" uid="uid://brpn0fn2j7hst" path="res://scenes/HTP.tscn" id="10_vbkhc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2fug6"]
texture = ExtResource("5_nf7si")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0

[sub_resource type="TileSet" id="TileSet_w7jpv"]
sources/1 = SubResource("TileSetAtlasSource_2fug6")

[node name="Lobby" type="MarginContainer"]
clip_contents = true
offset_right = 1152.0
offset_bottom = 648.0
size_flags_vertical = 4
script = ExtResource("1_g2fmt")
lobby_player_scene = ExtResource("2_060bj")

[node name="Background" type="Sprite2D" parent="."]
show_behind_parent = true
texture_filter = 3
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_d1r8r")
centered = false

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(0, 439.03)
layout_mode = 2
theme_override_colors/font_color = Color(0.960784, 0.894118, 0.780392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_lgr3l")
theme_override_font_sizes/font_size = 50
text = "Dungeon and Decks"
horizontal_alignment = 1

[node name="BackgroundMenu" type="TileMap" parent="Label"]
modulate = Color(1, 1, 1, 0.941176)
show_behind_parent = true
clip_children = 2
texture_filter = 1
position = Vector2(659, 120)
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_w7jpv")
format = 2
layer_0/tile_data = PackedInt32Array(65528, 196609, 1, 131064, 196609, 2, 196600, 196609, 3, 262136, 196609, 4, 327672, 196609, 5, 393208, 196609, 1, 65529, 65537, 1, 131065, 65537, 2, 196601, 65537, 3, 262137, 65537, 4, 327673, 65537, 5, 393209, 65537, 1, 65530, 131073, 1, 131066, 131073, 2, 196602, 131073, 3, 262138, 131073, 4, 327674, 131073, 5, 393210, 131073, 1, 65531, 196609, 1, 131067, 196609, 2, 196603, 196609, 3, 262139, 196609, 4, 327675, 196609, 5, 393211, 196609, 1, 65532, 65537, 1, 131068, 65537, 2, 196604, 65537, 3, 262140, 65537, 4, 327676, 65537, 5, 393212, 65537, 1, 65533, 131073, 1, 131069, 131073, 2, 196605, 131073, 3, 262141, 131073, 4, 327677, 131073, 5, 393213, 131073, 1, 65534, 196609, 1, 131070, 196609, 2, 196606, 196609, 3, 262142, 196609, 4, 327678, 196609, 5, 393214, 196609, 1, 65535, 65537, 1, 131071, 65537, 2, 196607, 65537, 3, 262143, 65537, 4, 327679, 65537, 5, 393215, 65537, 1, 0, 131073, 1, 65536, 131073, 2, 131072, 131073, 3, 196608, 131073, 4, 262144, 131073, 5, 327680, 131073, 1, 458749, 131073, 2, 327681, 196609, 1, 262145, 196609, 5, 196609, 196609, 4, 131073, 196609, 3, 65537, 196609, 2, 1, 196609, 1, -131071, 196609, 4, -131072, 131073, 4, -131073, 65537, 3, -131074, 196609, 3, -131075, 131073, 3, -131076, 65537, 3, -131077, 196609, 3, -131078, 131073, 3, -131079, 65537, 3, -131080, 196609, 3, -131081, 131073, 3, -131082, 65537, 3, -65546, 65537, 4, -65545, 131073, 4, -65544, 196609, 4, -65543, 65537, 4, -65542, 131073, 4, -65541, 196609, 4, -65540, 65537, 4, -65539, 131073, 4, -65538, 196609, 4, -65537, 65537, 4, -65535, 196609, 5, -65536, 131073, 5, -1, 65537, 5, -2, 196609, 5, -3, 131073, 5, -4, 65537, 5, -5, 196609, 5, -6, 131073, 5, -7, 65537, 5, -8, 196609, 5, -9, 131073, 5, -10, 65537, 5, 65526, 65537, 1, 131062, 65537, 2, 196598, 65537, 3, 262135, 131073, 4, 327671, 131073, 5, 393207, 131073, 1, 262134, 65537, 4, 65527, 131073, 1, 131063, 131073, 2, 196599, 131073, 3, 458744, 196609, 2, 458745, 65537, 2, 458746, 131073, 2, 458747, 196609, 2, 458748, 65537, 2, 458750, 196609, 2, -65533, 131073, 5, 3, 131073, 1, 65539, 131073, 2, 131075, 131073, 3, 196611, 131073, 4, 262147, 131073, 5, 327683, 131073, 1, 327684, 196609, 1, 262148, 196609, 5, 196612, 196609, 4, 131076, 196609, 3, 65540, 196609, 2, 4, 196609, 1, -65532, 196609, 5, 65541, 65537, 2, 131077, 65537, 3, 196613, 65537, 4, 262149, 65537, 5, 327685, 65537, 1, 5, 65537, 1, 262146, 65537, 5, 327682, 65537, 1, 196610, 65537, 4, 131074, 65537, 3, 65538, 65537, 2, 2, 65537, 1, -65534, 65537, 5, -131070, 65537, 4, 524293, 65537, 4, 524292, 196609, 4, 524291, 131073, 4, 524290, 65537, 4, 524289, 196609, 4, 524288, 131073, 4, 589823, 65537, 4, 589822, 196609, 4, 589821, 131073, 4, 589820, 65537, 4, 524284, 65537, 3, 524285, 131073, 3, 524286, 196609, 3, 458751, 65537, 2, 393216, 131073, 2, 393217, 196609, 2, 393218, 65537, 2, 393219, 131073, 2, 393220, 196609, 2, 393221, 65537, 2, 458757, 65537, 3, 458753, 196609, 3, 458754, 65537, 3, 458755, 131073, 3, 458752, 131073, 3, 524287, 65537, 3, 458756, 196609, 3, 524295, 196609, 4, 458759, 196609, 3, 393223, 196609, 2, 327687, 196609, 1, 262150, 131073, 5, 196614, 131073, 4, 131078, 131073, 3, 65542, 131073, 2, 6, 131073, 1, -65531, 65537, 5, -131067, 65537, 4, -196603, 65537, 3, -262139, 65537, 2, -327675, 65537, 1, -327673, 196609, 1, -262136, 65537, 2, -196600, 65537, 3, -131064, 65537, 4, -65528, 65537, 5, 8, 65537, 1, 65544, 65537, 2, 131079, 196609, 3, 196615, 196609, 4, 262151, 196609, 5, 524294, 131073, 4, 458758, 131073, 3, 393222, 131073, 2, 327686, 131073, 1, -65530, 131073, 5, -131066, 131073, 4, -327674, 131073, 1, -262137, 196609, 2, -131065, 196609, 4, -65529, 196609, 5, 7, 196609, 1, -196602, 131073, 3, -131069, 131073, 4, -131068, 196609, 4, -262138, 131073, 2, -327676, 196609, 1, -262140, 196609, 2, -196604, 196609, 3, -327672, 65537, 1, -196601, 196609, 3, 65543, 196609, 2, 131080, 65537, 3, 196616, 65537, 4, 262152, 65537, 5, 327688, 65537, 1, 393224, 65537, 2, 458760, 65537, 3, 524296, 65537, 4, -262159, 131073, 1, -196623, 131073, 2, -131087, 131073, 3, -65551, 131073, 4, -15, 131073, 5, 65521, 131073, 1, -262158, 196609, 1, -196622, 196609, 2, -131086, 196609, 3, -65550, 196609, 4, -14, 196609, 5, 65522, 196609, 1, -262157, 65537, 1, -196621, 65537, 2, -131085, 65537, 3, -65549, 65537, 4, -13, 65537, 5, 65523, 65537, 1, -262156, 131073, 1, -196620, 131073, 2, -131084, 131073, 3, -65548, 131073, 4, -12, 131073, 5, 65524, 131073, 1, -262155, 196609, 1, -196619, 196609, 2, -131083, 196609, 3, -65547, 196609, 4, -11, 196609, 5, 65525, 196609, 1, 131057, 131073, 2, 196593, 131073, 3, 262129, 131073, 4, 327665, 131073, 5, 393201, 131073, 1, 458737, 131073, 2, 524273, 131073, 3, 131058, 196609, 2, 196594, 196609, 3, 262130, 196609, 4, 327666, 196609, 5, 393202, 196609, 1, 458738, 196609, 2, 524274, 196609, 3, 131059, 65537, 2, 196595, 65537, 3, 262131, 65537, 4, 327667, 65537, 5, 393203, 65537, 1, 458739, 65537, 2, 524275, 65537, 3, 131060, 131073, 2, 196596, 131073, 3, 262132, 131073, 4, 327668, 131073, 5, 393204, 131073, 1, 458740, 131073, 2, 524276, 131073, 3, 131061, 196609, 2, 196597, 196609, 3, 262133, 196609, 4, 327669, 196609, 5, 393205, 196609, 1, 458741, 196609, 2, 524277, 196609, 3, 589809, 131073, 4, 589810, 196609, 4, 589811, 65537, 4, 589812, 131073, 4, 589813, 196609, 4, -262154, 65537, 1, -196618, 65537, 2, -262153, 131073, 1, -196617, 131073, 2, -262152, 196609, 1, -196616, 196609, 2, -262151, 65537, 1, -196615, 65537, 2, -262150, 131073, 1, -196614, 131073, 2, 327670, 65537, 5, 393206, 65537, 1, 458742, 65537, 2, 524278, 65537, 3, 458743, 131073, 2, 524279, 131073, 3, 524280, 196609, 3, 524281, 65537, 3, 524282, 131073, 3, 589814, 65537, 4, 589815, 131073, 4, 589816, 196609, 4, 589817, 65537, 4, 589818, 131073, 4, -262149, 196609, 1, -196613, 196609, 2, -262148, 65537, 1, -196612, 65537, 2, -262147, 131073, 1, -196611, 131073, 2, -262146, 196609, 1, -196610, 196609, 2, -262145, 65537, 1, -196609, 65537, 2, 524283, 196609, 3, 589819, 196609, 4, -327680, 131073, 1, -262144, 131073, 2, -196608, 131073, 3, -327679, 196609, 1, -262143, 196609, 2, -196607, 196609, 3, -327678, 65537, 1, -262142, 65537, 2, -196606, 65537, 3, -327677, 131073, 1, -262141, 131073, 2, -196605, 131073, 3, -327671, 131073, 1, -262135, 131073, 2, -196599, 131073, 3, -131063, 131073, 4, -65527, 131073, 5, 9, 131073, 1, 65545, 131073, 2, 131081, 131073, 3, 196617, 131073, 4, 262153, 131073, 5, 327689, 131073, 1, 393225, 131073, 2, 458761, 131073, 3, -196624, 65537, 2, -131088, 65537, 3, -65552, 65537, 4, -16, 65537, 5, 65520, 65537, 1, 131056, 65537, 2, 196592, 65537, 3, 262128, 65537, 4, 327664, 65537, 5, 393200, 65537, 1, 458736, 65537, 2, 524272, 65537, 3, -262160, 65537, 1, 524297, 131073, 4, 589808, 65537, 4)

[node name="Marco" type="Sprite2D" parent="Label"]
visible = false
clip_children = 2
z_index = 10
texture_filter = 1
position = Vector2(134, -68)
scale = Vector2(10, 7)
texture = ExtResource("6_vxr6i")
centered = false
flip_h = true

[node name="PanelContainer" type="PanelContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0

[node name="Menus" type="MarginContainer" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="PlayMenu" type="VBoxContainer" parent="PanelContainer/Menus"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/Menus/PlayMenu"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="Play" type="Button" parent="PanelContainer/Menus/PlayMenu/GridContainer"]
unique_name_in_owner = true
texture_filter = 3
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 12
text = "PLAY"

[node name="Options" type="Button" parent="PanelContainer/Menus/PlayMenu/GridContainer"]
unique_name_in_owner = true
texture_filter = 3
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 12
text = "OPTIONS"

[node name="HowtoPlay" type="Button" parent="PanelContainer/Menus/PlayMenu/GridContainer"]
unique_name_in_owner = true
texture_filter = 3
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 12
text = "How to Play"

[node name="Credits" type="Button" parent="PanelContainer/Menus/PlayMenu/GridContainer"]
unique_name_in_owner = true
texture_filter = 3
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 12
text = "Credits"

[node name="CreditsMenu" parent="PanelContainer/Menus" instance=ExtResource("9_1t657")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="OptionsMenu" parent="PanelContainer/Menus" instance=ExtResource("6_nhnaf")]
unique_name_in_owner = true
visible = false
layout_mode = 2
visibleBackground = false

[node name="HowToPlayMenu" parent="PanelContainer/Menus" instance=ExtResource("10_vbkhc")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="StartMenu" type="VBoxContainer" parent="PanelContainer/Menus"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="PanelContainer/Menus/StartMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Menus/StartMenu/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="PanelContainer/Menus/StartMenu/GridContainer/HBoxContainer"]
texture_filter = 3
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 10
text = "Name:
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="User" type="LineEdit" parent="PanelContainer/Menus/StartMenu/GridContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 10
text = "Player"

[node name="VBoxContainer" type="HBoxContainer" parent="PanelContainer/Menus/StartMenu"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 4

[node name="Host" type="Button" parent="PanelContainer/Menus/StartMenu/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 3
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 10
text = "Host"

[node name="Join" type="Button" parent="PanelContainer/Menus/StartMenu/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 3
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 10
text = "Join"

[node name="BackStart" type="Button" parent="PanelContainer/Menus/StartMenu"]
unique_name_in_owner = true
texture_filter = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 10
text = "Back"

[node name="JoinMenu" type="VBoxContainer" parent="PanelContainer/Menus"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/Menus/JoinMenu"]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/Menus/JoinMenu/HBoxContainer2"]
texture_filter = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 10
text = "IP:
"

[node name="IP" type="LineEdit" parent="PanelContainer/Menus/JoinMenu/HBoxContainer2"]
unique_name_in_owner = true
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 10
text = "127.0.0.1"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Menus/JoinMenu"]
layout_mode = 2

[node name="BackJoin" type="Button" parent="PanelContainer/Menus/JoinMenu/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 10
text = "Back"

[node name="ConfirmJoin" type="Button" parent="PanelContainer/Menus/JoinMenu/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 10
text = "Join"

[node name="Info" type="Label" parent="PanelContainer/Menus/JoinMenu"]
visible = false
layout_mode = 2

[node name="ReadyMenu" type="VBoxContainer" parent="PanelContainer/Menus"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/Menus/ReadyMenu"]
texture_filter = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 10
text = "Players:
"

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/Menus/ReadyMenu"]
layout_mode = 2

[node name="Players" type="VBoxContainer" parent="PanelContainer/Menus/ReadyMenu/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Menus/ReadyMenu"]
layout_mode = 2

[node name="RoleA" type="Button" parent="PanelContainer/Menus/ReadyMenu/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 10
text = "Warrior"

[node name="RoleB" type="Button" parent="PanelContainer/Menus/ReadyMenu/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 10
text = "Mage"

[node name="RoleC" type="Button" parent="PanelContainer/Menus/ReadyMenu/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 10
text = "Archer"

[node name="RoleD" type="Button" parent="PanelContainer/Menus/ReadyMenu/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 10
text = "Healer"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/Menus/ReadyMenu"]
layout_mode = 2

[node name="BackReady" type="Button" parent="PanelContainer/Menus/ReadyMenu/HBoxContainer2"]
unique_name_in_owner = true
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 10
text = "Back
"

[node name="Ready" type="Button" parent="PanelContainer/Menus/ReadyMenu/HBoxContainer2"]
unique_name_in_owner = true
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 10
text = "Ready"

[node name="TimeContainer" type="HBoxContainer" parent="PanelContainer/Menus/ReadyMenu"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/Menus/ReadyMenu/TimeContainer"]
texture_filter = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 10
text = "Starting in:"

[node name="Time" type="Label" parent="PanelContainer/Menus/ReadyMenu/TimeContainer"]
unique_name_in_owner = true
texture_filter = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("7_7yn50")
theme_override_font_sizes/font_size = 10
text = "5"

[node name="StartTimer" type="Timer" parent="."]
